# mids_capstone_api

./: README.md  Untitled.ipynb  app.js  index.html  load_and_save_model.ipynb
api/: Dockerfile  pyproject.toml
api/src/: main.py
