[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["RYAN MITCHELL <ryan.mitchell@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.91.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
requests = "^2.28.2"
pytest = "^7.2.1"
torch = "^1.13.1"
black = "^23.1.0"
isort = "^5.12.0"
httpx = "^0.23.3"
diffusers = "^0.12.1"
transformers = "^4.26.1"
joblib = "^1.2.0"
accelerate = "^0.16.0"
python-multipart = "^0.0.5"
pydantic = "^1.10.4"
jinja2 = "^3.1.2"
kubernetes = "^26.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
